tests/baselines/reference/parserAccessors5.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors5.ts(2,13): error TS1183: An implementation cannot be declared in ambient contexts.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors5.ts (1 errors) ====
    declare class C {
      get foo() { return 0; }
                ~
!!! error TS1183: An implementation cannot be declared in ambient contexts.
    }